--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,6 +7,9 @@
 body {
     width: 100%;
     height: 100dvh;
+
+    background-color: #F2D6B3;
+    color: #401201;
 }
 
 /* Screen Up to (420px) */
@@ -21,9 +24,11 @@ header {
 
     display: flex;
     flex-direction: row;
-    background-color: #333;
+    /* background-color: #333; */
+    background-color: #A60303;
 
-    color: wheat;
+    /* color: wheat; */
+    color: #F2D6B3;
     padding: 1rem;
     align-items: center;
 }
@@ -41,12 +46,17 @@ header {
 #menu__open div {
     width: 25px;
     height: 3px;
-    background-color: wheat;
+    background-color: #F2D6B3;
     margin: 5px;
+
+    box-shadow: 2px 2px 2px black;
 }
 
 header h1 {
     font-size: larger;
+    font-weight: bolder;
+
+    text-shadow: 2px 2px 2px black;
 }
 
 nav {
@@ -64,7 +74,7 @@ nav {
     padding: 0.5rem 2rem;
     gap: 0.5rem;
 
-    background-color: #333;
+    background-color: #A60303;
 }
 
 .inactive {
@@ -73,7 +83,7 @@ nav {
 
 
 #menu__close {
-    color: wheat;
+    color: #F2D6B3;
 
     width: 2rem;
     height: 2rem;
@@ -81,6 +91,8 @@ nav {
     font-weight: bold;
     font-size: larger;
     text-align: center;
+
+    text-shadow: 2px 2px 2px black;
 }
 
 #menu__close:hover {
@@ -100,11 +112,14 @@ nav {
 .menu__item {
     padding: 0.5rem;
     list-style: none;
+
+    text-shadow: 2px 2px 2px black;
 }
 
 .menu__item a {
     text-decoration: none;
-    color: wheat;
+    color: #F2D6B3;
+    font-weight: bold;
 }
 
 .menu__item a:hover {
@@ -116,8 +131,6 @@ nav {
     font-weight: normal;
     color: gray;
 }
-
-
 
 /* About */
 main {
@@ -166,6 +179,13 @@ hr {
     margin: 1rem 1rem;
 }
 
+h2 {
+    font-weight: bold;
+    font-size: xx-large;
+
+    text-shadow: 1px 1px 1px black;
+}
+
 hr {
     border: 1px solid red;
     margin-bottom: 1rem;
@@ -174,6 +194,8 @@ hr {
 p {
     text-indent: 1rem;
     text-align: justify;
+    font-weight: bold;
+    font-size: large;
 }
 
 /* Products */
@@ -200,14 +222,26 @@ p {
     padding: 1.5rem 0;
     text-indent: 1rem;
     text-align: justify;
+
 }
 
 .list__itens button {
     height: 2rem;
     width: 100%;
     border-radius: 0.5rem;
+    background-color: #6F7302;
+
+    color: #F2D6B3;
+    font-weight: bolder;
+
+    text-shadow: 2px 2px 2px black;
 }
 
+.list__itens button:hover {
+    opacity: 0.8;
+}
+
+/* xm: Screen up to 640px */
 @media screen and (max-width: 639px) {
     .fade {
         position: absolute;
@@ -221,7 +255,7 @@ p {
 }
 
 
-/* sm: Screen up to 781px */
+/* sm: Screen up to 1023px */
 @media screen and (min-width: 640px) {
 
     /* Navbar */
@@ -271,14 +305,36 @@ p {
     }
 }
 
-/* md: Screen up to 1023px */
-@media screen and (min-width: 782px) {}
-
 /* lg: Screen up to 1279px */
-@media screen and (min-width: 1024px) {}
+@media screen and (min-width: 1024px) {
+    #about {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
 
-/* xl: Screen up to 1535px */
-@media screen and (min-width: 1280px) {}
+        justify-content: space-between;
+        align-items: flex-start;
+    }
 
-/* 2xl: Screen from 1536px+ */
-@media screen and (min-width: 1536px) {}
+    #about__image {
+        height: 300px;
+        width: 300px;
+    }
+
+
+    #about div {
+        width: 49%;
+    }
+
+    #products__list {
+        grid-template-columns: 25% 25% 25% 25%;
+        justify-items: center;
+    }
+
+    .backgroundImage {
+        min-width: 210px;
+        min-height: 210px;
+        background-position: center;
+        background-size: cover;
+    }
+}
