--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -22,15 +22,20 @@ header {
     width: 100%;
     height: 3rem;
 
-    display: flex;
-    flex-direction: row;
-    /* background-color: #333; */
     background-color: #A60303;
 
-    /* color: wheat; */
     color: #F2D6B3;
-    padding: 1rem;
+
+    justify-content: center;
     align-items: center;
+
+    padding: 0.5rem 1rem;
+}
+
+header div:nth-child(2) {
+    display: flex;
+    flex-direction: row;
+    max-width: 1024px;
 }
 
 .flatButton {
@@ -52,10 +57,10 @@ header {
     box-shadow: 2px 2px 2px black;
 }
 
-header h1 {
+header div h1 {
+    margin-top: 0.2rem;
     font-size: larger;
     font-weight: bolder;
-
     text-shadow: 2px 2px 2px black;
 }
 
@@ -142,6 +147,7 @@ section {
     width: 100%;
     height: auto;
     padding: 2rem 1rem 0;
+    max-width: 1024px;
 }
 
 main section:first-child {
@@ -259,7 +265,7 @@ p {
 @media screen and (min-width: 640px) {
 
     /* Navbar */
-    header {
+    header div:nth-child(2) {
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-between;
@@ -273,7 +279,7 @@ p {
         flex-direction: row;
         align-items: center;
 
-        padding: 0;
+        padding: 0 1rem;
         position: static;
     }
 
@@ -286,7 +292,8 @@ p {
         display: none;
     }
 
-    header h1 {
+    header div h1 {
+        margin: 0 1rem;
         font-size: x-large;
     }
 
@@ -307,6 +314,20 @@ p {
 
 /* lg: Screen up to 1279px */
 @media screen and (min-width: 1024px) {
+
+    main,
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    header div:nth-child(2) {
+        width: 1024px;
+        justify-content: space-between;
+        padding: 0 1.1rem;
+    }
+
     #about {
         display: flex;
         flex-direction: row;
@@ -320,7 +341,6 @@ p {
         height: 300px;
         width: 300px;
     }
-
 
     #about div {
         width: 49%;
